Closed Bug 287690 Opened 21 years ago Closed 21 years ago

applet crashes Firefox - Trunk [@ nsPluginTag::RegisterWithCategoryManager ]

Categories

(Core :: Networking, defect, P1)

x86
Windows 2000
defect

Tracking

()

VERIFIED FIXED
mozilla1.8beta2

People

(Reporter: Peter6, Assigned: darin.moz)

References

()

Details

(Keywords: crash, regression, topcrash)

Crash Data

Attachments

(1 file)

Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.8b2) Gecko/20050324 Firefox/1.0+ repro: 1.Enable (Sun) Java 2.Open url 3.crash this regressed 20050324 between the builds of 15:16 PST (works) and 23:11 PST (crashes) it must be one of the checkins between 14:58 and 21:15 PST Talkback: TB4593507Z
Crash on Linux Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.8b2) Gecko/20050325 Firefox/1.0+
Crashes on WinXP too. Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.8b2) Gecko/20050325 Firefox/1.0+ (bangbang023)
maybe a hint at the cause. Chatzilla can't connect anymore in builds after 15:16 PST
for step 1) ALWAYS add the used Plugin version if you report a bug related to a plugin
(In reply to comment #4) > for step 1) ALWAYS add the used Plugin version if you report a bug related to a > plugin JRE 1.5.0
Right... I updated on Sun's site to 1.5 Update 2 and it does NOT crash anymore. This version is not available via https://pfs.mozilla.org/plugins/ yet ! Use the Java control panel to update. Setting WFM thanks Matti.
Status: NEW → RESOLVED
Closed: 21 years ago
Resolution: --- → WORKSFORME
I am an idiot. Tested with the wrong build to set WFM Still crashes with the latest java version
Status: RESOLVED → REOPENED
Resolution: WORKSFORME → ---
Talkback TB4598008K
Chatzilla gives: "Error creating socket" and refuses to connect
-> core : plugins
Component: General → Plug-ins
Product: Firefox → Core
This is a regression from my changes to nsProtocolProxyService (see bug 282442).
Assignee: firefox → darin
Blocks: 282442
Status: REOPENED → NEW
Component: Plug-ins → Networking
Keywords: crash
QA Contact: general → benc
Attached patch v1 patchSplinter Review
fix both plugins and chatzilla.
Attachment #178596 - Flags: review?(cbiesinger)
Severity: major → blocker
Status: NEW → ASSIGNED
Priority: -- → P1
Target Milestone: --- → mozilla1.8beta2
ignore the chatzilla changes. those are now in bug 287729.
Comment on attachment 178596 [details] [diff] [review] v1 patch r=dmose for the nsPluginHostImpl.cpp changes
fixed-on-trunk
Status: ASSIGNED → RESOLVED
Closed: 21 years ago21 years ago
Resolution: --- → FIXED
Attachment #178596 - Flags: review?(cbiesinger)
*** Bug 287681 has been marked as a duplicate of this bug. ***
Summary: applet crahes Firefox → applet crashes Firefox
Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.8b2) Gecko/20050325 Firefox/1.0+ patch included verified for win
Summary: applet crashes Firefox → applet crashes Firefox [@ nsPluginTag::RegisterWithCategoryManager ]
*** Bug 287775 has been marked as a duplicate of this bug. ***
Adding topcrash info for future reference. Verified fixed per latest Talkback data.
Status: RESOLVED → VERIFIED
Keywords: topcrash
Summary: applet crashes Firefox [@ nsPluginTag::RegisterWithCategoryManager ] → applet crashes Firefox - Trunk [@ nsPluginTag::RegisterWithCategoryManager ]
Crash Signature: [@ nsPluginTag::RegisterWithCategoryManager ]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: