fixes regression bug 287690 "applet crashes Firefox" r=dmose